--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -50,17 +50,29 @@ h3 {
     color: #fff;
 }
 
-.btn {
+.btn:link,
+.btn:visited {
     display: inline-block;
     padding: 10px 30px;
     font-weight: 300;
     text-decoration: none;
     border-radius: 200px;
     color: #fff;
-
+    transition: background-color 0.2s, border 0.2s, color 0.2s;
 }
 
-.btn-full {
+.btn-full:link,
+.btn-full:visited {
     background-color: #E67E22;
     border: 1px solid #E67E22;
+}
+
+.btn:hover,
+.btn:active {
+    background-color: #cf6d17;
+}
+
+.btn-full:hover,
+.btn-full:active {
+    border: 1px solid #cf6d17;
 }
